# pst-pst-pst

./: .gitignore  Cargo.toml  README.md  license  readme.md  spec.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: execution-log.md  implementation-checklist.md  roadmap.md
docs/adr/: adr-no-ffi.md  adr-search-modes.md
