[package]
name = "pst-pst-pst-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"
description = "Command-line orchestrator for pst-pst-pst mailbox analytics and workflows."

[dependencies]
pst-pst-pst-core = { path = "../core", features = ["serde"] }
pst-pst-pst-export = { path = "../export" }
pst-pst-pst-index = { path = "../index" }
pst-pst-pst-parser = { path = "../parser" }
pst-pst-pst-ui = { path = "../ui" }
pst-pst-pst-common = { path = "../common" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
